--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	},
 	"require": {
 		"inc2734/wp-github-plugin-updater": "^3.1",
-		"automattic/jetpack-autoloader": "^3.0"
+		"automattic/jetpack-autoloader": "^3.0",
+		"erusev/parsedown": "^1.7"
 	},
 	"scripts": {
 		"lint": "phpcs",
